crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_metadata_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(_score, 2) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(2))                                                        |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                     |
|               |     Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, trunc(vector_search(qs, Utf8("second"), answer)._score, Int64(2)), vector_search(qs, Utf8("second"), answer)._score |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, answer, id]                                                                                                                                          |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(2))@2 as trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(2))]                                       |
|               |   SortPreservingMergeExec: [_score@3 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                            |
|               |     SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                |
|               |       ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(_score@2, 2) as trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(2)), _score@2 as _score]                                                             |
|               |         ProjectionExec: expr=[CAST(key@1 AS Int64) as id, answer@0 as answer, 1 - distance@2 as _score]                                                                                                                             |
|               |           BytesProcessedExec                                                                                                                                                                                                        |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                    |
|               |               S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                          |
|               |                                                                                                                                                                                                                                     |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
