crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_metadata_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(_score, 2) as _score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by _score desc, id LIMIT 4"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                               |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer).id ASC NULLS LAST, fetch=4                                                                                             |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer).id, vector_search(qs, Utf8("secondary"), answer).answer, trunc(vector_search(qs, Utf8("secondary"), answer)._score, Int64(2)) AS _score |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer) projection=[_score, answer, id], full_filters=[vector_search(qs, Utf8("secondary"), answer).subject != Utf8("math")]                   |
| physical_plan | SortPreservingMergeExec: [_score@2 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                             |
|               |   SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                 |
|               |     ProjectionExec: expr=[CAST(key@1 AS Int64) as id, answer@0 as answer, trunc(1 - distance@2, 2) as _score]                                                                                      |
|               |       BytesProcessedExec                                                                                                                                                                           |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                       |
|               |           S3VectorsQueryExec (INDEX_NAME_1): filter={subject:{$ne:"math"}} limit=100                                                                                                               |
|               |                                                                                                                                                                                                    |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
