crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_metadata_vector_search_sql_random.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "subject": "math"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  }
]
