crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_metadata_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
+---------------+---------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                |
+---------------+---------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).subject                                                       |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, fetch=4                                  |
|               |     Projection: vector_search(qs, Utf8("second"), answer).subject, vector_search(qs, Utf8("second"), answer)._score |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, subject]                             |
| physical_plan | ProjectionExec: expr=[subject@0 as subject]                                                                         |
|               |   SortPreservingMergeExec: [_score@1 DESC], fetch=4                                                                 |
|               |     SortExec: TopK(fetch=4), expr=[_score@1 DESC], preserve_partitioning=[true]                                     |
|               |       ProjectionExec: expr=[subject@0 as subject, 1 - distance@2 as _score]                                         |
|               |         BytesProcessedExec                                                                                          |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                      |
|               |             S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                            |
|               |                                                                                                                     |
+---------------+---------------------------------------------------------------------------------------------------------------------+
